<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/title_color"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/windows_color">

        <RelativeLayout
            android:id="@+id/ly_top_bar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/title_color">

            <TextView
                android:id="@+id/txt_topbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/txt_home"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/ly_tab_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_home"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:background="@drawable/tab_menu_bg"
                android:drawablePadding="-8dp"
                android:drawableTop="@drawable/tab_menu_home"
                android:gravity="center"
                android:text="@string/txt_home"
                android:textColor="@drawable/tab_menu_text"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/txt_service"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:background="@drawable/tab_menu_bg"
                android:drawablePadding="-8dp"
                android:drawableTop="@drawable/tab_menu_service"
                android:gravity="center"
                android:text="@string/txt_service"
                android:textColor="@drawable/tab_menu_text"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_discover"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:background="@drawable/tab_menu_bg"
                android:drawablePadding="-8dp"
                android:drawableTop="@drawable/tab_menu_discover"
                android:gravity="center"
                android:text="@string/txt_discover"
                android:textColor="@drawable/tab_menu_text"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/txt_my"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:background="@drawable/tab_menu_bg"
                android:drawablePadding="-8dp"
                android:drawableTop="@drawable/tab_menu_my"
                android:gravity="center"
                android:text="@string/txt_my"
                android:textColor="@drawable/tab_menu_text"
                android:textSize="12sp" />

        </LinearLayout>


        <FrameLayout
            android:id="@+id/ly_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/ly_tab_bar"
            android:layout_below="@id/ly_top_bar"
            android:layout_margin="0px">

        </FrameLayout>

    </RelativeLayout>
</LinearLayout>