<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windows_color"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.sxwz.qcodelib.widget.ZScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_item_selector">

                <ImageView
                    android:id="@+id/avatar_iv"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@mipmap/avatar"/>
                <TextView
                    android:id="@+id/txt_user_info"
                    style="@style/TxtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="10dp"
                    android:drawableRight="@mipmap/right"
                    android:gravity="center_vertical"
                    android:paddingRight="16dp"
                    android:text="@string/q_email"
                    android:textSize="16sp"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />


            <TextView
                android:id="@+id/txt_fav"
                style="@style/TxtTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@mipmap/icon_me_collect"
                android:drawablePadding="10dp"
                android:drawableRight="@mipmap/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/txt_fav"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

            <TextView
                android:id="@+id/txt_card"
                style="@style/TxtTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@mipmap/icon_me_card"
                android:drawablePadding="10dp"
                android:drawableRight="@mipmap/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/txt_card"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

            <TextView
                android:id="@+id/txt_setting"
                style="@style/TxtTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@mipmap/icon_me_setting"
                android:drawablePadding="10dp"
                android:drawableRight="@mipmap/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/txt_setting"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />


        </LinearLayout>
    </com.sxwz.qcodelib.widget.ZScrollView>
</LinearLayout>